huge commit, streamline events, add wallets, implement funcs
